<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/ic_widget_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/icon_iv"
        android:layout_width="45sp"
        android:layout_height="45sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="25sp"
        android:src="@drawable/ic_environment_icon" />

    <LinearLayout
        android:id="@+id/net_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="20sp"
        android:layout_toEndOf="@+id/icon_iv"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/net_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/environmental_monitor"
            android:textColor="#CCFFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textview_show_refresh_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1sp"
            android:text="@string/update"
            android:textColor="#80ffffff"
            android:textSize="15sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/net_type_layout"
        android:layout_marginStart="100sp"

        android:layout_marginTop="10sp">

        <RelativeLayout
            android:id="@+id/layout_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/textview_show_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/unknown"
                android:textColor="#00C5A1"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/tv_temperature_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textview_show_temperature"
                android:layout_toEndOf="@+id/textview_show_temperature"
                android:text="@string/celsius"
                android:textColor="#CCFFFFFF"
                android:textSize="25sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_signal_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_signal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5sp"
            android:text="@string/current_temperature"
            android:textColor="#CCFFFFFF"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_card2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/net_type_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="100sp">

        <RelativeLayout
            android:id="@+id/layout_down_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/textview_show_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/unknown"
                android:textColor="#00C5A1"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/tv_down_speed_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textview_show_humidity"
                android:layout_toEndOf="@+id/textview_show_humidity"
                android:text="@string/percentage"
                android:textColor="#CCFFFFFF"
                android:textSize="25sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_down_speed_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_down_speed"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5sp"
            android:text="@string/current_humidity"
            android:textColor="#CCFFFFFF"
            android:textSize="15sp" />

    </RelativeLayout>

</RelativeLayout>